add font media util

--- a/Scss/center.scss
+++ b/Scss/center.scss
@@ -68,3 +68,5 @@
 .child-with-known-dimensions {
     @include center(400px, 400px);
 }
+
+//http://www.w3cplus.com/preprocessor/centering-with-sass.html
