--- a/Scss/font.scss
+++ b/Scss/font.scss
@@ -4,10 +4,8 @@
 //weight:   CSS中的font-weight，设置字体的粗细
 //style:    CSS中的font-style，设置字体的样式
 
-
-$font-stack:
-(group: brandon, id: light, font: ('Brandon Grot W01 Light', san-serif ), weight: 200, style: normal),
-(group: brandon, id: light-italic, font: ('Brandon Grot W01 Light', san-serif ), weight: 200, style: italic),
+$font-stack: (group: brandon, id: light, font: ('Brandon Grot W01 Light', san-serif), weight: 200, style: normal),
+(group: brandon, id: light-italic, font: ('Brandon Grot W01 Light', san-serif), weight: 200, style: italic),
 (group: brandon, id: regular, font: ('Brandon Grot W01-Regular', san-serif), weight: 400, style: normal),
 (group: brandon, id: regular-italic, font: ('Brandon Grot W01-Regular', san-serif), weight: 400, style: italic),
 (group: brandon, id: bold, font: ('Brandon Grot W01 Black', san-serif), weight: 700, style: normal),
@@ -16,9 +14,9 @@ $font-stack:
 (group: code, id: regular, font: (monospace), weight: 400, style: normal);
 
 // Breakpoint Mixin
-@mixin font($group, $id:regular){
-    @each $font in $font-stack{
-        @if($group == map-get($font, group) and $id == map-get($font, id)){
+@mixin font($group, $id:regular) {
+    @each $font in $font-stack {
+        @if ($group == map-get($font, group) and $id == map-get($font, id)) {
             font-family: map-get($font, font);
             font-weight: map-get($font, weight);
             font-style: map-get($font, style);
@@ -26,22 +24,27 @@ $font-stack:
     }
 }
 
-h1{
+h1 {
     @include font(brandon, light-italic);
 }
-p{
+
+p {
     @include font(brandon);
 }
-p i{
+
+p i {
     @include font(brandon, regular-italic);
 }
-p b{
+
+p b {
     @include font(brandon, bold);
 }
-blockquote{
+
+blockquote {
     @include font(clarendon);
 }
-code{
+
+code {
     @include font(code);
 }
 
